# kwin-style-crystal

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO.txt  aclocal.m4  configure  configure.in  configure.in.in  crystal.kdevelop  crystal.kdevelop.pcs  crystal.kdevses
client/: CMakeLists.txt  Makefile.am  Makefile.in  aqua.h  buttonimage.cpp  buttonimage.h  common.h  crystalbutton.cpp  crystalbutton.h  crystalclient.cc  crystalclient.cpp  crystalclient.h  crystalfactory.cpp  crystalfactory.h  crystalgl.desktop  glfont.cpp  glfont.h  handpainted.h  imageholder.cpp  imageholder.h  knifty.h  myrootpixmap.cc  myrootpixmap.h  overlays.h  render.cpp  svg.h  tiles.h  vista.h
client/config/: CMakeLists.txt  Makefile.am  Makefile.in  configdialog.qrc  configdialog.ui  configdialog.ui.h  crystalconfig.cc  crystalconfig.cpp  crystalconfig.h  infodialog.ui
pics/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  aqua.h  embedtool.cpp  tiles.h
pics/aqua/: AUTHOR
pics/glass-pill/: all-buttons.xcf
